# cleanrl

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  launch-docker-narval.py  launch-docker.py  launch.py  launch.sh  launchGPU.sh  main.py  pyproject.toml  requirements.txt  run_jobs_list.sh
cleanrl/: buffer_gap.py  c51.py  c51_atari.py  c51_atari_jax.py  c51_jax.py  ddpg_continuous_action.py  ddpg_continuous_action_jax.py  dqn.py  dqn_atari.py  dqn_atari_jax.py  dqn_crafter.py  dqn_jax.py  ppg_procgen.py  ppo.py  ppo_atari.py  ppo_atari_envpool.py  ppo_atari_envpool_xla_jax.py  ppo_atari_envpool_xla_jax_scan.py  ppo_atari_lstm.py  ppo_atari_multigpu.py  ppo_continuous_action.py  ppo_pettingzoo_ma_atari.py  ppo_procgen.py  ppo_rnd_envpool.py  pqn.py  pqn_atari.py  pqn_atari_envpool.py  pqn_atari_envpool_lstm.py  qdagger_dqn_atari_impalacnn.py  qdagger_dqn_atari_jax_impalacnn.py  rainbow_atari.py  rpo_continuous_action.py  sac.py  sac_atari.py  sac_continuous_action.py  td3_continuous_action.py  td3_continuous_action_jax.py
cleanrl/ppo_continuous_action_isaacgym/: ppo_continuous_action_isaacgym.py
cleanrl/ppo_trxl/: ppo_trxl.py
cleanrl_utils/evals/: c51_eval.py  c51_jax_eval.py  ddpg_eval.py  ddpg_jax_eval.py  dqn_eval.py  dqn_jax_eval.py  ppo_eval.py  td3_eval.py  td3_jax_eval.py
docs/blog/posts/: cleanrl-v1.md
docs/get-started/: CleanRL_Huggingface_Integration_Demo.ipynb
docs/rl-algorithms/: ppo.md
plotting/: make_plots.py  make_plots_Atari.py  make_plots_GRPO.py  make_plots_PPO.py  make_plots_PQN.py  make_plots_SAC.py  make_plots_SAC_with_RND.py  make_plots_eval_top_percent.py  rliable_plot.py  rliable_plot_new_SAC_PQN.py
toy_landscape/: README.md  env.py  run.py  visualize.py
