[project]
name = "cleanrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==1.4.0",
    "ale-py==0.8.1",
    "antlr4-python3-runtime==4.9.3",
    "appdirs==1.4.4",
    "arch==5.3.0",
    "attrs==25.4.0",
    "autorom==0.4.2",
    "autorom-accept-rom-license==0.6.1",
    "bitmath==1.3.3.1",
    "cachetools==5.3.0",
    "certifi==2023.5.7",
    "chardet==4.0.0",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "cloudpickle==3.0.0",
    "colorama==0.4.4",
    "commonmark==0.9.1",
    "contourpy==1.3.2",
    "cycler==0.11.0",
    "decorator==4.4.2",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "docker-pycreds==0.4.0",
    "docstring-parser==0.15",
    "e==1.4.5",
    "enum-tools==0.13.0",
    "envpool==0.6.6",
    "farama-notifications==0.0.4",
    "filelock==3.12.0",
    "fonttools==4.38.0",
    "fsspec==2025.10.0",
    "gitdb==4.0.10",
    "gitpython==3.1.31",
    "glfw==1.12.0",
    "google-auth==2.18.0",
    "google-auth-oauthlib==0.4.6",
    "graphviz==0.21",
    "grpcio==1.54.0",
    "gym==0.23.1",
    "gym-notices==0.0.8",
    "gymnasium==0.28.1",
    "hbutils==0.13.0",
    "huggingface-hub==0.14.1",
    "hydra-core==1.3.2",
    "idna==3.4",
    "imageio==2.28.1",
    "imageio-ffmpeg==0.3.0",
    "importlib-resources==6.5.2",
    "jax-jumpy==1.0.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.4",
    "lz4==4.4.5",
    "markdown==3.3.7",
    "markupsafe==2.1.2",
    "matplotlib==3.6.0",
    "milatools>=0.0.18",
    "minatar",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "mujoco==2.3.3",
    "networkx==3.4.2",
    "numpy==1.24.4",
    "oauthlib==3.2.2",
    "omegaconf==2.3.0",
    "opencv-python==4.8.1.78",
    "packaging==23.1",
    "pandas==2.0.3",
    "pathtools==0.1.2",
    "patsy==1.0.2",
    "pillow==9.5.0",
    "proglog==0.1.10",
    "property-cached==1.6.4",
    "psutil==5.9.5",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pygame==2.1.0",
    "pygments==2.15.1",
    "pynvml==11.5.0",
    "pyopengl==3.1.6",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytimeparse==1.1.8",
    "pytz==2023.3",
    "pyyaml==6.0.1",
    "requests==2.30.0",
    "requests-oauthlib==1.3.1",
    "rich==13.5.2",
    "rllte-core",
    "rlplot",
    "rsa==4.7.2",
    "scipy==1.15.3",
    "seaborn==0.12.2",
    "setproctitle==1.3.2",
    "shimmy==0.2.1",
    "shtab==1.6.4",
    "six==1.16.0",
    "smmap==5.0.0",
    "stable-baselines3==2.0.0",
    "statsmodels==0.14.5",
    "sympy==1.13.1",
    "tenacity==8.2.3",
    "tensorboard>=2.11.2",
    "termcolor==3.2.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.65.0",
    "treevalue==1.5.0",
    "triton==3.1.0",
    "types-protobuf==6.32.1.20251105",
    "typing-extensions==4.15.0",
    "tyro==0.5.10",
    "tzdata==2025.2",
    "urllib3==1.26.15",
    "wandb==0.25.1",
    "werkzeug==2.2.3",
    "wrapt==2.0.1",
]

[tool.uv.sources]
minatar = { git = "https://github.com/Neo-X/MinAtar.git" }
rllte-core = { git = "https://github.com/Neo-X/rllte.git" }
rlplot = { git = "https://github.com/mantle2048/rlplot.git" }
xmanager-slurm = { path = "../xm-slurm" }

[[tool.xmanager.slurm.clusters]]
host = "narval"
user = "ahugs"
account = "def-gberseth"
runtime = "apptainer"
prolog = "module load apptainer httpproxy"

[tool.xmanager.slurm.clusters.environment]

[tool.cluv]
# Where to store job results by default. Can be overridden per cluster.
results_path = "$SCRATCH/logs/cluv"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
## Where to read the data from when synchronizing data to all clusters.
#data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
## Where the dataset should be replicated on all clusters.
#datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIMELIMIT = "3:00:00"
SBATCH_REQUEUE = "1"
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE="1"
WANDB_MODE="offline"


###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = {UV_OFFLINE="0", WANDB_MODE="online"}

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
results_path = "$HOME/logs/cluv"
# datasets_path = "$HOME/datasets/cifar10"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
env = {SBATCH_ACCOUNT="def-bengioy"}
